# pipeDQ

./: .coverage  .gitignore  README.md  demo.py  pyproject.toml
pipedq/: __init__.py  env.py
pipedq/sql/: __init__.py  config.py  factory.py  models.py
pipedq/sql/engines/: __init__.py  base.py  duckdb_engine.py  pyspark_engine.py  sqlite_engine.py
tests/sql/: __init__.py  test_engines.py
