[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeDQ"
version = "0.1.0"
description = "A Python/PySpark library for data quality checks and validation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "pyspark>=3.0.0",
    "duckdb>=0.10.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
